--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Interaction design</title>
+  <!-- tailwindcss CDN -->
+  <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+  <!-- my css setting -->
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="webpage_style.css"> <!-- ⬅️ 你的样式放后面 -->
-  <!-- MediaPipe -->
-  <!-- <script src="https://cdn.jsdelivr.net/npm/@mediapipe/selfie_segmentation"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_utils"></script> -->
-
   <!-- Teachable Machine -->
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/pose@0.8/dist/teachablemachine-pose.min.js"></script>
@@ -21,8 +20,10 @@
   <div class="box">
     <!-- 左边区域 -->
     <div class="box-left">
-      <img src="" alt="">
-      <h1>Teachable Machine Pose Model</h1>
+      <video video autoplay muted playsinline>
+        <source src="./asset/Big Logo.webm">
+      </video>
+      <h1 class="text-3xl font-bold underline">Teachable Machine Pose Model</h1>
     </div>
     <!-- 中间区域 -->
     <div class="spacer"></div>
@@ -31,7 +32,10 @@
       <div class="prototype">
         <!-- <video id="webcam" autoplay playsinline muted></video> -->
         <div class="screen">
-          <canvas id="canvas" width="400" height="700"></canvas>
+          <div class="camera_screen" style="position: relative; width: 400; height: 700;">
+            <canvas id="uicanvas" width="400" height="700"></canvas>
+            <canvas id="canvas" width="400" height="700"></canvas>
+          </div>
           <button type="button" onclick="init()" class="start-button">Start</button>
         </div>
         <div class="base">
@@ -45,5 +49,6 @@
 
   <script src="./webcamera.js" type="text/javascript"></script>
 </body>
+<!-- <script src="./asset/first_try.png"></script> -->
 
 </html>
