--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <video video autoplay muted playsinline>
         <source src="./asset/Big Logo.webm">
       </video>
-      <h1 class="text-3xl font-bold underline">Teachable Machine Pose Model</h1>
+      <h1 class="intro">Dance, Technology, and Intercultural Connection in Milan</h1>
     </div>
     <!-- 中间区域 -->
     <div class="spacer"></div>
@@ -36,7 +36,9 @@
             <canvas id="uicanvas" width="400" height="700"></canvas>
             <canvas id="canvas" width="400" height="700"></canvas>
           </div>
-          <button type="button" onclick="init()" class="start-button">Start</button>
+          <button type="button" onclick="init()"
+            class="px-4 py-2 bg-gray-500 text-white rounded hover:bg-green-600 transition"
+            id="startbutton">Start</button>
         </div>
         <div class="base">
           <div id="label-container"></div>
