--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
         <source src="./asset/Big Logo.webm">
       </video>
       <h1 class="intro">Dance, Technology, and Intercultural Connection in Milan</h1>
+      <p> Explore and understand the potential of combining dance practices and digital technologies in Milan to
+        foster intercultural connections, enhance social well-being, and promote a stronger sense of community among its
+        diverse population. </p>
     </div>
     <!-- 中间区域 -->
     <div class="spacer"></div>
