--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <!-- <video id="webcam" autoplay playsinline muted></video> -->
         <div class="screen">
           <div class="camera_screen" style="position: relative; width: 400; height: 700;">
-            <video id="animVideo" src="./asset/export_alpha.webm" muted></video>
+            <video id="animVideo" src="./asset/Animation_Alpha.webm" muted></video>
             <canvas id="uicanvas" width="400" height="700"></canvas>
             <canvas id="canvas" width="400" height="700"></canvas>
           </div>
