update movement sequence

--- a/index.html
+++ b/index.html
@@ -36,13 +36,18 @@
         <!-- <video id="webcam" autoplay playsinline muted></video> -->
         <div class="screen">
           <div class="camera_screen" style="position: relative; width: 400; height: 700;">
+            <!-- <div class="video_wrapper">
+              <iframe id="touchdesigner" src="https://vdo.ninja/?view=X7W9Ktr&label=1234"
+                allow="autoplay; fullscreen; camera; microphone" frameborder="0" muted>
+              </iframe>
+            </div> -->
             <video id="animVideo" muted></video>
             <canvas id="uicanvas" width="400" height="700"></canvas>
             <canvas id="canvas" width="400" height="700"></canvas>
           </div>
-          <button type="button" onclick="init()"
+          <!-- <button type="button" onclick="init()"
             class="px-4 py-2 bg-gray-500 text-white rounded hover:bg-green-600 transition"
-            id="startbutton">Start</button>
+            id="startbutton">Start</button> -->
         </div>
         <div class="base">
           <div id="label-container"></div>
