--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
         <div class="screen">
           <div class="camera_screen" style="position: relative; width: 400; height: 700;">
             <canvas id="uicanvas" width="400" height="700"></canvas>
-            <div class="video_wrapper">
+            <!-- <div class="video_wrapper">
               <iframe id="touchdesigner" src="https://vdo.ninja/?view=Tk2Yaju&label=123123123"
                 allow="autoplay; fullscreen; camera; microphone" frameborder="0" muted>
               </iframe>
-            </div>
+            </div> -->
             <video id="animVideo" muted></video>
             <div id="bar-container"></div>
             <div id="label-container"></div>
