--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
   <div class="box">
     <!-- 左边区域 -->
     <div class="box-left">
-      <video video autoplay muted playsinline>
+      <!-- <video video autoplay muted playsinline>
         <source src="./asset/Big Logo.webm">
-      </video>
+      </video> -->
+      <img class="logo" src="./asset/logo.jpg" alt="">
       <h1 class="intro">Dance, Technology, and Intercultural Connection in Milan</h1>
       <p> Explore and understand the potential of combining dance practices and digital technologies in Milan to
         foster intercultural connections, enhance social well-being, and promote a stronger sense of community among its
