--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <!-- <video video autoplay muted playsinline>
         <source src="./asset/Big Logo.webm">
       </video> -->
-      <img class="logo" src="./asset/logo.jpg" alt="">
+      <img class="logo" src="./asset/logo.svg" alt="">
       <h1 class="intro">Dance, Technology, and Intercultural Connection in Milan</h1>
       <p> Explore and understand the potential of combining dance practices and digital technologies in Milan to
         foster intercultural connections, enhance social well-being, and promote a stronger sense of community among its
